--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,24 @@
   --primary-dark: rgba(255,255,255,0);
   --primary-red: #ef4035;
   --primary-hover-red: #f33501;
+  --primary-purple: #5904c2;
+  --primary-grey: rgba(255,255,255, .7);
 }
 
-body {
+/**********************************HOMEJS**************************************************/
+.home {
   font-family: "Roboto Condensed" ,  sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+ /* align-items: center; */
+  height: 100%;
+  width: 100%;;
+ /* background-image:  url('https://images.pexels.com/photos/15286/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500') no-repeat !important; */
+  background-size: cover;
+  background-color: red !important;
 }
+
 /**********************************************NAVBAR**********************************************************/
 nav {
   z-index: 2;
@@ -52,14 +65,24 @@ nav ul li {
   border-top: 0.1875rem solid var(--primary-orange);
 }
 
-/**********************************************HEADER**********************************************************/
+/**********************************************HEADER*********************************************************/
+body {
+  font-family: "Roboto Condensed" ,  sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+ /* background: url(wallpaper.jpg) no-repeat ;  */
+ /* background: url('https://images.pexels.com/photos/15286/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500') no-repeat ; */
+  background-size: cover;
+}
 .header-wrapper {
   position: relative;
-  background: url(wallpaper.jpg) no-repeat ;
   background-size: cover;
   background-position: center;
   height: 90vh;
-}
+} 
 .main-info {
   font-family: "Roboto Condensed",  sans-serif;
   display: flex;
@@ -121,3 +144,176 @@ nav ul li {
     display: none;
   }
 } 
+/*************************CONTACT***********************************/
+
+body, html {
+  font-family: "Roboto Condensed" ,  sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  
+  background: url(wallpaper.jpg) no-repeat ;  
+}
+.contact, html, body {
+  font-family: "Roboto Condensed" ,  sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+ background-image:  url('https://images.pexels.com/photos/15286/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500') no-repeat !important; 
+  background-size: cover;
+}
+
+h1 {
+  text-align: center;
+  color: var(--primary-white);
+  font-size: 3rem;
+  text-shadow: 0px 1px 3px rgba(0,0,0,0.6); 
+}
+
+p.sub-title {
+  color: var(--primary-white);
+  text-align: center;
+  font-size: 2rem;
+  text-shadow: 0px 1px 3px rgba(0,0,0,0.6); 
+}
+
+.contact-container {
+  width: 75rem;
+  border-radius: 0.9375rem;
+  overflow: hidden;
+  padding: 0.625rem;
+  display: flex;
+  backdrop-filter: blur(25px);
+  border: 1px solid rgba(255,255,255, .2);
+}
+  .contact-info {
+    background-color: var(--primary-purple);
+    border-radius: 0.9375rem;
+    flex: 0 1 40%;
+    padding: 2.5rem;
+    color: var(--primary-white);
+    display: flex;
+    flex-direction: column;
+  }
+    h4 {
+      font-size: 2rem;
+      font-weight: 500;
+      margin-top: 0;
+    }
+
+    p {
+      font-size: 1.3rem;
+      color: var(--primary-grey);
+      font-weight: 300;
+      margin-bottom: 2rem;
+    }
+
+    form { 
+      padding: 40px;
+      width: 100%;
+    }
+      .col {
+        display: flex;
+        width: 100%;
+        flex: 0 0 100%;
+        
+      }
+      .form-group {
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        flex: 0 1 100%;
+        padding: 15px;
+        
+      }
+      .form-group.solo { 
+        padding: 0;
+      }
+
+      label {
+        font-size: .1.1rem;
+        color: rgba(255,255,255, .6);
+        margin-bottom: 1rem;
+      }
+input[type="text"], input[type="email"], input[type="tel"], textarea {
+  background: transparent;
+  border: none ;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 300;
+  color: var(--primary-white);
+  border-bottom: 2px solid rgba(255,255,255, .4);
+  transition: .3s all ease-in-out;
+}
+input, textarea:focus {
+  outline: none !important;
+  border-bottom: 2px solid #05f7ff;
+}
+#radio-buttons { 
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  
+}
+ .radio-button {
+  margin-right: 20px !important;
+}
+
+button {
+  width: 150px;
+  height: 50px;
+  cursor: pointer;
+  border: none;
+  background: var(--primary-white);
+  text-transform: uppercase;
+  border-radius: 5px !important;
+}
+.form-group.right {
+  align-items: flex-end !important;
+}
+
+    .icon-text {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+
+    .social-media {
+      display: flex;
+      width: 50%;
+      justify-content: space-between;
+    }
+
+    .icon-social {
+      flex: 0 1 40px;
+      font-size: 1.5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 40px;
+      border-radius: 50%;
+      transition: .5s all ease-in-out;
+    }
+    .icon-social:hover {
+      background: #05f7ff
+    }
+
+
+    .fas {
+      flex: 0 0 20px;
+      font-size: 1.3rem;
+      margin-right: 2rem;
+      color: #05f7ff !important;
+   }
+  
+    span {
+      font-size: 1.3rem;
+      font-weight: 300;
+    }
+  
